--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@
 %prod.quarkus.container-image.registry=quay.io
 %prod.quarkus.container-image.group=openshiftlabs
 %prod.quarkus.container-image.name=mad-workshop-deployer
-%prod.quarkus.container-image.tag=1.0
+%prod.quarkus.container-image.tag=latest
