Update HTTP CORS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@
 %prod.quarkus.container-image.group=openshiftlabs
 %prod.quarkus.container-image.name=mad-workshop-deployer
 %prod.quarkus.container-image.tag=latest
+
+%prod.quarkus.http.cors=true
